[workspace]
members = [    
    "shared",
    "api",
    "apps/*",    
]

[workspace.dependencies]
axum = { version = "0.6", features = ["macros"], default-features = true }
sqlx = { version = "0.6", features = ["postgres", "chrono", "runtime-tokio-rustls", "uuid", "offline", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

chrono = { version = "0.4", features = ["serde"] }
ulid = "1.0.0"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
serde = { version = "1.0.151", features = ["serde_derive"] }
serde_derive = "1.0.151"
serde_json = "1.0.91"
serde_with = "2.2.0"
thiserror = "1.0.38"
axum-auth = "0.4.0"
addr = "0.15.6"
jsonwebtoken = { version = "8" }
slug = "0.1.4"
validator = { version = "0.16.0", features = ["derive"] }
once_cell = "1.17.0"
regex = "1.7.1"