[workspace]
members = [    
    "shared",
    "api",
    "apps/*",
]

[workspace.dependencies]
axum = { version = "0.6", features = ["macros"], default-features = true }
sqlx = { version = "0.6", features = ["postgres", "chrono", "runtime-tokio-rustls", "uuid", "offline", "json", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "json"] }
axum-extra = { version = "0.4", features = ["query"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aide = { version = "0.10.0", features = ["axum", "redoc", "macros", "axum-extra-query"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
serde = { version = "1.0.151", features = ["serde_derive"] }
serde_derive = "1.0.151"
serde_json = { version = "1.0.91", features = ["raw_value"] }
serde_with = "2.2.0"
thiserror = "1.0.38"
axum-auth = "0.4.0"
addr = "0.15.6"
slug = "0.1.4"
validator = { version = "0.16.0", features = ["derive"] }
once_cell = "1.17.0"
regex = "1.7.1"
phf = { version = "0.11.1", features = ["macros"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }