[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aide = { workspace = true }
dotenv = "0.15.0"
tower-http = { version = "0.3", features = ["trace", "limit", "compression-full", "metrics", "sensitive-headers", "timeout", "validate-request", "cors"] }
opendal = { workspace = true }


shared = { path = "../shared" }
accounts = { path = "../apps/accounts" }
blogs = { path = "../apps/blogs" }
clippings = { path = "../apps/clippings" }
media = { path = "../apps/media" }
analytics = { path = "../apps/analytics" }