[package]
name = "clippings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
serde_with = { workspace = true }
phf = { workspace = true }
schemars = { workspace = true }
aide = { workspace = true }
slug = "0.1"
rusty_ulid = {version = "2.0.0", features = ["serde", "schemars"]}

shared = { path = "../../shared" }
accounts = { path = "../accounts" }


[dev-dependencies]
reqwest = { workspace = true }

[build-dependencies]
schemars = { workspace = true }