[package]
name = "media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
serde_with = { workspace = true }
phf = { workspace = true }
schemars = { workspace = true }
aide = { workspace = true }
opendal = { workspace = true }
once_cell = {workspace = true}
futures = "0.3"
tokio-util = { version = "0.7.7", features = ["io"] }
rusty_ulid = "2.0.0"
itertools = "0.10.5"


accounts = { path = "../accounts" }
shared = { path = "../../shared" }